--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "i3-layout-tree-to-jgf",
-  "version": "0.0.0",
-  "description": "Convert i3 layout JSON tree to JSON Graph Format",
-  "main": "src/cli.js",
-  "bin": "src/cli.js",
-  "scripts": { },
+  "version": "0.0.1",
+  "description": " Visualize the layout tree of a workspace in i3 window manager",
+  "main": "src/index.js",
+  "bin": {
+    "i3-layout-to-dot": "bin/cli.js"
+  },
+  "scripts": {
+    "start": "node bin/cli.js"
+  },
   "author": "Christophe Benz",
   "license": "GPLv3+",
   "dependencies": {
-    "read-file-stdin": "^0.2.1"
+    "jgf-dot": "^1.1.0",
+    "read-file-stdin": "^0.2.1",
+    "strip-json-comments": "^2.0.1"
   }
 }
